--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+.App{
+    width: 50%;
+    height: 50vh;
+    border: 3px solid burlywood;
+    margin: auto;
+    margin-top: 8%;
+    background-color: antiquewhite;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+    width:20vw;
+    height:5vh;
+    background-color: blueviolet;
+    margin-left: 30%;
+    border: none;
+    margin-top: 10px;
+    color: white;
+    font-size: 15px;
+    font-weight: 800;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.reset{
+    margin-top: 10%;
 }
 
-.App-link {
-  color: #61dafb;
+.score{
+    background-color: yellow;
+    margin-left: 25%;
+    width: 50%;
+    margin-top: 10px;
+    text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span{
+    color: green;
+    font-size: 30px;
 }
